# linking_explained

./: README.md
dynamically_linked_libraries/: CMakeLists.txt  sub.c
static_linking/: CMakeLists.txt
statically_linked_libraries/: CMakeLists.txt  main.c
